Icon fix on Safari

--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ body {
 }
 
 .header a.linkedin img {
+  width: 35px; 
   width: 2.2rem;
   border-radius: 10%;
   background: radial-gradient(white 66%, #0077b5 70%);
@@ -151,6 +152,7 @@ body {
 
 .header a.github img {
 	background: radial-gradient(#fff 66%, black 70%);
+  width: 32px; 
   border-radius: 50%;
 }
 /* Main section of page */
